# dbt-athena-development

./: .gitignore  dbt_project.yml  profiles.yml  pyproject.toml
logs/: dbt.log.legacy
models/: model.sql
seeds/: employment_indicators_november_2022_csv_tables.csv
snapshots/: model_snapshot_1.sql  model_snapshot_2.sql  model_snapshot_3.sql  snapshot.sql
